force-app/main/default/objects/Lead_Mode__c/Lead_Mode__c.object-meta.xml
<CustomObject>
    <label>Lead Mode</label>
    <nameField>
        <label>Lead Mode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Mode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>