force-app/main/default/objects/Lead_Mode__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipLabel>Lead Mode</relationshipLabel>
    <relationshipName>Lead_Mode</relationshipName>
    <type>Lookup</type>
</CustomField>