force-app/main/default/objects/Lead_Mode__c/fields/Lead_Mode_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode_Code__c</fullName>
    <label>Lead Mode Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>