force-app/main/default/objects/Lead_Mode__c/fields/Lead_Mode_No__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode_No__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Lead Mode No</label>
    <type>AutoNumber</type>
</CustomField>