force-app/main/default/objects/Lead_Mode__c/fields/Lead_Mode_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mode_Record_Id__c</fullName>
    <label>Lead Mode Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>