force-app/main/default/objects/Lead_Mode__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Priority</fullName>
            </value>
            <value>
                <fullName>Second Priority</fullName>
            </value>
            <value>
                <fullName>Third Priority</fullName>
            </value>
            <value>
                <fullName>Fourth Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>