force-app/main/default/objects/Lead_Mode__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Lead Mode</relationshipLabel>
    <relationshipName>Lead_Mode</relationshipName>
    <type>Lookup</type>
</CustomField>