force-app/main/default/objects/Lead_Mode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Mode_Code__c</columns>
    <columns>Priority__c</columns>
    <columns>Program__c</columns>
    <columns>Centre__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>